// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "server";
option java_outer_classname = "TravelAgencyProto";
option objc_class_prefix = "TAP";

package server;

// The greeting service definition.
service TransactionHandler {
  // Sends a greeting
  rpc SendTransaction (TransactionRequest) returns (TransactionReply) {}
}

message Variable {
    string id = 1;
}

message Transaction {
    string id = 1;
    repeated Operation operations = 2;
    repeated Variable readSet = 3;
    repeated Variable writeSet = 4;
    int32 operationPointer = 5;
}

message OperationParameters {
    repeated string parameters = 4;
}

message Operation {
    string instruction = 1;
    Variable variable = 2;
    OperationParameters parameters = 3;
}

// The request message containing the user's name.
message TransactionRequest {
    repeated Transaction transaction = 1;
}

// The response message containing the greetings
message TransactionReply {
  string message = 1;
}
